# brainco_hand_ros2

./: README_CN.md
brainco_hardware/brainco_hand_driver/config/: protocol_canfd_left.yaml  protocol_canfd_right.yaml  protocol_modbus_left.yaml  protocol_modbus_right.yaml
brainco_hardware/stark_ethercat/brainco_hand_ethercat_driver/config/: revo2_left.ros2_control.xacro  revo2_left.urdf.xacro  revo2_right.ros2_control.xacro  revo2_right.urdf.xacro
revo2_with_rm65_demo/rm65_with_revo2_right_moveit_config/launch/: rm65_with_revo2_right_moveit.launch.py
revo2_with_rm65_demo/rm_revo2_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
revo2_with_rm65_demo/rm_revo2_bridge/launch/: rm_revo2_bridge.launch.py
revo2_with_rm65_demo/rm_revo2_bridge/rm_revo2_bridge/: rm_revo2_bridge_node.py
revo2_with_rm65_demo/rm_revo2_bridge/scripts/: rm_revo2_bridge_node
tools/: README.md  TCP_STREAMING_CN.md  move_arm_pose_sequence.py  move_arm_to_pose.py  pose_sequence_example.json  revo2_cmds.sh  sequence_demo.py  shake_hand.json  tcp_realtime_bridge_ros2.py  tcp_sender_windows.py  translation.json
