<?xml version="1.0"?>
<package format="3">
  <name>rm_revo2_bridge</name>
  <version>0.1.0</version>
  <description>Bridge RM65 arm and Revo2 hand via RM SDK (TCP + end-tool Modbus/485)</description>

  <maintainer email="fishros@example.com">fishros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rm_ros_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
